web-front/rules/examples/fixtures/ci-scan-project/src/views/pass/CustomElPrefix.vue
<template>
  <!-- 自有组件 EligibilityCard 不在 EP denylist，不应报错 -->
  <EligibilityCard title="ok" />
</template>

<script setup lang="ts"></script>
