web-front/rules/examples/fixtures/ci-scan-project/src/views/fail/DynamicPlainIs.vue
<template>
  <component is="el-button" />
</template>

<script setup lang="ts"></script>
